// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`SearchBar should render correctly 1`] = `
.c2 {
  display: block;
  width: 100%;
  height: 52px;
  padding: 0 20px;
  box-sizing: border-box;
  font-family: 'IBM Plex Sans','Helvetica Neue',Arial,sans-serif;
  font-size: 18px;
  color: #545456;
  border-width: 1px;
  border-color: #CCC;
  border-style: solid;
  border-radius: 0.5rem;
  background-color: #FFF;
  background-image: none;
  outline-width: 0;
  -webkit-user-select: text;
  -moz-user-select: text;
  -ms-user-select: text;
  user-select: text;
}

.c2:disabled {
  color: #545456;
  background: #FFF;
  cursor: not-allowed;
}

.c5 {
  font-family: 'IBM Plex Sans','Helvetica Neue',Arial,sans-serif;
  font-weight: 400;
  font-size: 20px;
  text-transform: none;
  font-style: normal;
  color: #545456;
  opacity: 1;
}

.c4 {
  color: #545456;
  cursor: pointer;
}

.c4:hover {
  color: #757679;
}

.c4::before {
  font-family: 'icomoon';
  content: '\\e92d';
}

.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-box-pack: start;
  -webkit-justify-content: flex-start;
  -ms-flex-pack: start;
  justify-content: flex-start;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  width: 100%;
}

.c1 {
  background-color: #FFF;
  border-top-right-radius: 0;
  border-bottom-right-radius: 0;
}

.c3 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  width: 60px;
  height: 52px;
  background-color: #FFCA00;
  border-top-right-radius: 0.5rem;
  border-bottom-right-radius: 0.5rem;
}

<ThemeProvider
  theme={
    Object {
      "buttonBackgroundColor": "#004A7C",
      "buttonColor": "#FFF",
      "buttonHoverColor": "#0068af",
      "cartridgeBackgroundColor": "#004A7C",
      "cartridgeColor": "#FFF",
      "circleBadgeBackgroundColor": "#CCC",
      "circleBadgeHoverColor": "#004A7C",
      "dropdownBackgroundColor": "rgba(0, 0, 0, 0)",
      "dropdownColor": "#545456",
      "fontPrimary": "'IBM Plex Sans', 'Helvetica Neue', Arial, sans-serif;",
      "iconColor": "#545456",
      "iconHoverColor": "#757679",
      "inputBackgroundColor": "#FFF",
      "inputBorderColor": "#CCC",
      "inputColor": "#545456",
      "linkColor": "#545456",
      "linkHoverColor": "#004A7C",
      "palette": Object {
        "azure": "#3558A8",
        "bigStone": "#152343",
        "biscay": "#153A62",
        "black": "#000",
        "blackAlpha05": "rgba(0,0,0,0.05)",
        "blackAlpha75": "rgba(0,0,0,0.75)",
        "blueWood": "#27324B",
        "cerulean": "#10ADE4",
        "gold": "#FFCA00",
        "gray0": "#F8F8F8",
        "gray1": "#EEF2F5",
        "gray2": "#CCC",
        "gray3": "#999B9E",
        "gray4": "#757679",
        "gray5": "#545456",
        "gray6": "#383838",
        "gray7": "#040d25",
        "orient": "#004A7C",
        "powderBlue": "#B2D5E5",
        "transparent": "rgba(0, 0, 0, 0)",
        "white": "#FFF",
        "whiteAlpha10": "rgba(255,255,255,0.1)",
        "whiteAlpha75": "rgba(255,255,255,0.75)",
      },
      "panelBackgroundColor": "#FFF",
      "panelShadowColor": "#EEF2F5",
      "searchBarIconBackgroundColor": "#FFCA00",
      "searchBarInputBackgroundColor": "#FFF",
      "searchBarUnderlinedBackgroundColor": "rgba(0, 0, 0, 0)",
      "searchBarUnderlinedBorderColor": "#CCC",
      "sectionBackgroundColor": "#004A7C",
      "tabMenuBarColor": "#FFCA00",
      "tabMenuBorderColor": "#EEF2F5",
      "tableCellEvenBackgroundColor": "#F8F8F8",
      "tableCellOddBackgroundColor": "#FFF",
      "tableHeaderColor": "#999B9E",
      "tableShadowColor": "#EEF2F5",
      "textColor": "#545456",
    }
  }
>
  <SearchBar>
    <styled.div>
      <div
        className="c0"
      >
        <Styled(Input)>
          <Input
            className="c1"
            disabled={false}
            type="text"
            width="100%"
          >
            <styled.input
              className="c1"
              disabled={false}
              type="text"
              width="100%"
            >
              <input
                className="c1 c2"
                disabled={false}
                type="text"
                width="100%"
              />
            </styled.input>
          </Input>
        </Styled(Input)>
        <styled.div>
          <div
            className="c3"
          >
            <Icon
              name="search-filled"
              selectable={true}
              size="20px"
              weight={400}
            >
              <Styled(Text)
                code="\\\\e92d"
                selectable={true}
                size="20px"
                weight={400}
              >
                <Text
                  capitalize={false}
                  className="c4"
                  code="\\\\e92d"
                  italic={false}
                  opacity={1}
                  selectable={true}
                  size="20px"
                  uppercase={false}
                  weight={400}
                >
                  <styled.span
                    capitalize={false}
                    className="c4"
                    code="\\\\e92d"
                    italic={false}
                    opacity={1}
                    selectable={true}
                    size="20px"
                    uppercase={false}
                    weight={400}
                  >
                    <span
                      className="c4 c5"
                      opacity={1}
                      size="20px"
                    />
                  </styled.span>
                </Text>
              </Styled(Text)>
            </Icon>
          </div>
        </styled.div>
      </div>
    </styled.div>
  </SearchBar>
</ThemeProvider>
`;

exports[`SearchBar should render correctly with onChange 1`] = `
.c2 {
  display: block;
  width: 100%;
  height: 52px;
  padding: 0 20px;
  box-sizing: border-box;
  font-family: 'IBM Plex Sans','Helvetica Neue',Arial,sans-serif;
  font-size: 18px;
  color: #545456;
  border-width: 1px;
  border-color: #CCC;
  border-style: solid;
  border-radius: 0.5rem;
  background-color: #FFF;
  background-image: none;
  outline-width: 0;
  -webkit-user-select: text;
  -moz-user-select: text;
  -ms-user-select: text;
  user-select: text;
}

.c2:disabled {
  color: #545456;
  background: #FFF;
  cursor: not-allowed;
}

.c5 {
  font-family: 'IBM Plex Sans','Helvetica Neue',Arial,sans-serif;
  font-weight: 400;
  font-size: 20px;
  text-transform: none;
  font-style: normal;
  color: #545456;
  opacity: 1;
}

.c4 {
  color: #545456;
  cursor: pointer;
}

.c4:hover {
  color: #757679;
}

.c4::before {
  font-family: 'icomoon';
  content: '\\e92d';
}

.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-box-pack: start;
  -webkit-justify-content: flex-start;
  -ms-flex-pack: start;
  justify-content: flex-start;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  width: 100%;
}

.c1 {
  background-color: #FFF;
  border-top-right-radius: 0;
  border-bottom-right-radius: 0;
}

.c3 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  width: 60px;
  height: 52px;
  background-color: #FFCA00;
  border-top-right-radius: 0.5rem;
  border-bottom-right-radius: 0.5rem;
}

<ThemeProvider
  theme={
    Object {
      "buttonBackgroundColor": "#004A7C",
      "buttonColor": "#FFF",
      "buttonHoverColor": "#0068af",
      "cartridgeBackgroundColor": "#004A7C",
      "cartridgeColor": "#FFF",
      "circleBadgeBackgroundColor": "#CCC",
      "circleBadgeHoverColor": "#004A7C",
      "dropdownBackgroundColor": "rgba(0, 0, 0, 0)",
      "dropdownColor": "#545456",
      "fontPrimary": "'IBM Plex Sans', 'Helvetica Neue', Arial, sans-serif;",
      "iconColor": "#545456",
      "iconHoverColor": "#757679",
      "inputBackgroundColor": "#FFF",
      "inputBorderColor": "#CCC",
      "inputColor": "#545456",
      "linkColor": "#545456",
      "linkHoverColor": "#004A7C",
      "palette": Object {
        "azure": "#3558A8",
        "bigStone": "#152343",
        "biscay": "#153A62",
        "black": "#000",
        "blackAlpha05": "rgba(0,0,0,0.05)",
        "blackAlpha75": "rgba(0,0,0,0.75)",
        "blueWood": "#27324B",
        "cerulean": "#10ADE4",
        "gold": "#FFCA00",
        "gray0": "#F8F8F8",
        "gray1": "#EEF2F5",
        "gray2": "#CCC",
        "gray3": "#999B9E",
        "gray4": "#757679",
        "gray5": "#545456",
        "gray6": "#383838",
        "gray7": "#040d25",
        "orient": "#004A7C",
        "powderBlue": "#B2D5E5",
        "transparent": "rgba(0, 0, 0, 0)",
        "white": "#FFF",
        "whiteAlpha10": "rgba(255,255,255,0.1)",
        "whiteAlpha75": "rgba(255,255,255,0.75)",
      },
      "panelBackgroundColor": "#FFF",
      "panelShadowColor": "#EEF2F5",
      "searchBarIconBackgroundColor": "#FFCA00",
      "searchBarInputBackgroundColor": "#FFF",
      "searchBarUnderlinedBackgroundColor": "rgba(0, 0, 0, 0)",
      "searchBarUnderlinedBorderColor": "#CCC",
      "sectionBackgroundColor": "#004A7C",
      "tabMenuBarColor": "#FFCA00",
      "tabMenuBorderColor": "#EEF2F5",
      "tableCellEvenBackgroundColor": "#F8F8F8",
      "tableCellOddBackgroundColor": "#FFF",
      "tableHeaderColor": "#999B9E",
      "tableShadowColor": "#EEF2F5",
      "textColor": "#545456",
    }
  }
>
  <SearchBar
    onChange={[MockFunction]}
  >
    <styled.div>
      <div
        className="c0"
      >
        <Styled(Input)
          onChange={[MockFunction]}
        >
          <Input
            className="c1"
            disabled={false}
            onChange={[MockFunction]}
            type="text"
            width="100%"
          >
            <styled.input
              className="c1"
              disabled={false}
              onChange={[MockFunction]}
              type="text"
              width="100%"
            >
              <input
                className="c1 c2"
                disabled={false}
                onChange={[MockFunction]}
                type="text"
                width="100%"
              />
            </styled.input>
          </Input>
        </Styled(Input)>
        <styled.div>
          <div
            className="c3"
          >
            <Icon
              name="search-filled"
              selectable={true}
              size="20px"
              weight={400}
            >
              <Styled(Text)
                code="\\\\e92d"
                selectable={true}
                size="20px"
                weight={400}
              >
                <Text
                  capitalize={false}
                  className="c4"
                  code="\\\\e92d"
                  italic={false}
                  opacity={1}
                  selectable={true}
                  size="20px"
                  uppercase={false}
                  weight={400}
                >
                  <styled.span
                    capitalize={false}
                    className="c4"
                    code="\\\\e92d"
                    italic={false}
                    opacity={1}
                    selectable={true}
                    size="20px"
                    uppercase={false}
                    weight={400}
                  >
                    <span
                      className="c4 c5"
                      opacity={1}
                      size="20px"
                    />
                  </styled.span>
                </Text>
              </Styled(Text)>
            </Icon>
          </div>
        </styled.div>
      </div>
    </styled.div>
  </SearchBar>
</ThemeProvider>
`;

exports[`SearchBar should render correctly with onClick 1`] = `
.c2 {
  display: block;
  width: 100%;
  height: 52px;
  padding: 0 20px;
  box-sizing: border-box;
  font-family: 'IBM Plex Sans','Helvetica Neue',Arial,sans-serif;
  font-size: 18px;
  color: #545456;
  border-width: 1px;
  border-color: #CCC;
  border-style: solid;
  border-radius: 0.5rem;
  background-color: #FFF;
  background-image: none;
  outline-width: 0;
  -webkit-user-select: text;
  -moz-user-select: text;
  -ms-user-select: text;
  user-select: text;
}

.c2:disabled {
  color: #545456;
  background: #FFF;
  cursor: not-allowed;
}

.c5 {
  font-family: 'IBM Plex Sans','Helvetica Neue',Arial,sans-serif;
  font-weight: 400;
  font-size: 20px;
  text-transform: none;
  font-style: normal;
  color: #545456;
  opacity: 1;
}

.c4 {
  color: #545456;
  cursor: pointer;
}

.c4:hover {
  color: #757679;
}

.c4::before {
  font-family: 'icomoon';
  content: '\\e92d';
}

.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-box-pack: start;
  -webkit-justify-content: flex-start;
  -ms-flex-pack: start;
  justify-content: flex-start;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  width: 100%;
}

.c1 {
  background-color: #FFF;
  border-top-right-radius: 0;
  border-bottom-right-radius: 0;
}

.c3 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  width: 60px;
  height: 52px;
  background-color: #FFCA00;
  border-top-right-radius: 0.5rem;
  border-bottom-right-radius: 0.5rem;
}

<ThemeProvider
  theme={
    Object {
      "buttonBackgroundColor": "#004A7C",
      "buttonColor": "#FFF",
      "buttonHoverColor": "#0068af",
      "cartridgeBackgroundColor": "#004A7C",
      "cartridgeColor": "#FFF",
      "circleBadgeBackgroundColor": "#CCC",
      "circleBadgeHoverColor": "#004A7C",
      "dropdownBackgroundColor": "rgba(0, 0, 0, 0)",
      "dropdownColor": "#545456",
      "fontPrimary": "'IBM Plex Sans', 'Helvetica Neue', Arial, sans-serif;",
      "iconColor": "#545456",
      "iconHoverColor": "#757679",
      "inputBackgroundColor": "#FFF",
      "inputBorderColor": "#CCC",
      "inputColor": "#545456",
      "linkColor": "#545456",
      "linkHoverColor": "#004A7C",
      "palette": Object {
        "azure": "#3558A8",
        "bigStone": "#152343",
        "biscay": "#153A62",
        "black": "#000",
        "blackAlpha05": "rgba(0,0,0,0.05)",
        "blackAlpha75": "rgba(0,0,0,0.75)",
        "blueWood": "#27324B",
        "cerulean": "#10ADE4",
        "gold": "#FFCA00",
        "gray0": "#F8F8F8",
        "gray1": "#EEF2F5",
        "gray2": "#CCC",
        "gray3": "#999B9E",
        "gray4": "#757679",
        "gray5": "#545456",
        "gray6": "#383838",
        "gray7": "#040d25",
        "orient": "#004A7C",
        "powderBlue": "#B2D5E5",
        "transparent": "rgba(0, 0, 0, 0)",
        "white": "#FFF",
        "whiteAlpha10": "rgba(255,255,255,0.1)",
        "whiteAlpha75": "rgba(255,255,255,0.75)",
      },
      "panelBackgroundColor": "#FFF",
      "panelShadowColor": "#EEF2F5",
      "searchBarIconBackgroundColor": "#FFCA00",
      "searchBarInputBackgroundColor": "#FFF",
      "searchBarUnderlinedBackgroundColor": "rgba(0, 0, 0, 0)",
      "searchBarUnderlinedBorderColor": "#CCC",
      "sectionBackgroundColor": "#004A7C",
      "tabMenuBarColor": "#FFCA00",
      "tabMenuBorderColor": "#EEF2F5",
      "tableCellEvenBackgroundColor": "#F8F8F8",
      "tableCellOddBackgroundColor": "#FFF",
      "tableHeaderColor": "#999B9E",
      "tableShadowColor": "#EEF2F5",
      "textColor": "#545456",
    }
  }
>
  <SearchBar
    onClick={[MockFunction]}
  >
    <styled.div>
      <div
        className="c0"
      >
        <Styled(Input)>
          <Input
            className="c1"
            disabled={false}
            type="text"
            width="100%"
          >
            <styled.input
              className="c1"
              disabled={false}
              type="text"
              width="100%"
            >
              <input
                className="c1 c2"
                disabled={false}
                type="text"
                width="100%"
              />
            </styled.input>
          </Input>
        </Styled(Input)>
        <styled.div>
          <div
            className="c3"
          >
            <Icon
              name="search-filled"
              onClick={[MockFunction]}
              selectable={true}
              size="20px"
              weight={400}
            >
              <Styled(Text)
                code="\\\\e92d"
                onClick={[MockFunction]}
                selectable={true}
                size="20px"
                weight={400}
              >
                <Text
                  capitalize={false}
                  className="c4"
                  code="\\\\e92d"
                  italic={false}
                  onClick={[MockFunction]}
                  opacity={1}
                  selectable={true}
                  size="20px"
                  uppercase={false}
                  weight={400}
                >
                  <styled.span
                    capitalize={false}
                    className="c4"
                    code="\\\\e92d"
                    italic={false}
                    onClick={[MockFunction]}
                    opacity={1}
                    selectable={true}
                    size="20px"
                    uppercase={false}
                    weight={400}
                  >
                    <span
                      className="c4 c5"
                      onClick={[MockFunction]}
                      opacity={1}
                      size="20px"
                    />
                  </styled.span>
                </Text>
              </Styled(Text)>
            </Icon>
          </div>
        </styled.div>
      </div>
    </styled.div>
  </SearchBar>
</ThemeProvider>
`;

exports[`SearchBar should render correctly with value 1`] = `
.c2 {
  display: block;
  width: 100%;
  height: 52px;
  padding: 0 20px;
  box-sizing: border-box;
  font-family: 'IBM Plex Sans','Helvetica Neue',Arial,sans-serif;
  font-size: 18px;
  color: #545456;
  border-width: 1px;
  border-color: #CCC;
  border-style: solid;
  border-radius: 0.5rem;
  background-color: #FFF;
  background-image: none;
  outline-width: 0;
  -webkit-user-select: text;
  -moz-user-select: text;
  -ms-user-select: text;
  user-select: text;
}

.c2:disabled {
  color: #545456;
  background: #FFF;
  cursor: not-allowed;
}

.c5 {
  font-family: 'IBM Plex Sans','Helvetica Neue',Arial,sans-serif;
  font-weight: 400;
  font-size: 20px;
  text-transform: none;
  font-style: normal;
  color: #545456;
  opacity: 1;
}

.c4 {
  color: #545456;
  cursor: pointer;
}

.c4:hover {
  color: #757679;
}

.c4::before {
  font-family: 'icomoon';
  content: '\\e92d';
}

.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-box-pack: start;
  -webkit-justify-content: flex-start;
  -ms-flex-pack: start;
  justify-content: flex-start;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  width: 100%;
}

.c1 {
  background-color: #FFF;
  border-top-right-radius: 0;
  border-bottom-right-radius: 0;
}

.c3 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  width: 60px;
  height: 52px;
  background-color: #FFCA00;
  border-top-right-radius: 0.5rem;
  border-bottom-right-radius: 0.5rem;
}

<ThemeProvider
  theme={
    Object {
      "buttonBackgroundColor": "#004A7C",
      "buttonColor": "#FFF",
      "buttonHoverColor": "#0068af",
      "cartridgeBackgroundColor": "#004A7C",
      "cartridgeColor": "#FFF",
      "circleBadgeBackgroundColor": "#CCC",
      "circleBadgeHoverColor": "#004A7C",
      "dropdownBackgroundColor": "rgba(0, 0, 0, 0)",
      "dropdownColor": "#545456",
      "fontPrimary": "'IBM Plex Sans', 'Helvetica Neue', Arial, sans-serif;",
      "iconColor": "#545456",
      "iconHoverColor": "#757679",
      "inputBackgroundColor": "#FFF",
      "inputBorderColor": "#CCC",
      "inputColor": "#545456",
      "linkColor": "#545456",
      "linkHoverColor": "#004A7C",
      "palette": Object {
        "azure": "#3558A8",
        "bigStone": "#152343",
        "biscay": "#153A62",
        "black": "#000",
        "blackAlpha05": "rgba(0,0,0,0.05)",
        "blackAlpha75": "rgba(0,0,0,0.75)",
        "blueWood": "#27324B",
        "cerulean": "#10ADE4",
        "gold": "#FFCA00",
        "gray0": "#F8F8F8",
        "gray1": "#EEF2F5",
        "gray2": "#CCC",
        "gray3": "#999B9E",
        "gray4": "#757679",
        "gray5": "#545456",
        "gray6": "#383838",
        "gray7": "#040d25",
        "orient": "#004A7C",
        "powderBlue": "#B2D5E5",
        "transparent": "rgba(0, 0, 0, 0)",
        "white": "#FFF",
        "whiteAlpha10": "rgba(255,255,255,0.1)",
        "whiteAlpha75": "rgba(255,255,255,0.75)",
      },
      "panelBackgroundColor": "#FFF",
      "panelShadowColor": "#EEF2F5",
      "searchBarIconBackgroundColor": "#FFCA00",
      "searchBarInputBackgroundColor": "#FFF",
      "searchBarUnderlinedBackgroundColor": "rgba(0, 0, 0, 0)",
      "searchBarUnderlinedBorderColor": "#CCC",
      "sectionBackgroundColor": "#004A7C",
      "tabMenuBarColor": "#FFCA00",
      "tabMenuBorderColor": "#EEF2F5",
      "tableCellEvenBackgroundColor": "#F8F8F8",
      "tableCellOddBackgroundColor": "#FFF",
      "tableHeaderColor": "#999B9E",
      "tableShadowColor": "#EEF2F5",
      "textColor": "#545456",
    }
  }
>
  <SearchBar
    onChange={[MockFunction]}
    value="My search"
  >
    <styled.div>
      <div
        className="c0"
      >
        <Styled(Input)
          onChange={[MockFunction]}
          value="My search"
        >
          <Input
            className="c1"
            disabled={false}
            onChange={[MockFunction]}
            type="text"
            value="My search"
            width="100%"
          >
            <styled.input
              className="c1"
              disabled={false}
              onChange={[MockFunction]}
              type="text"
              value="My search"
              width="100%"
            >
              <input
                className="c1 c2"
                disabled={false}
                onChange={[MockFunction]}
                type="text"
                value="My search"
                width="100%"
              />
            </styled.input>
          </Input>
        </Styled(Input)>
        <styled.div>
          <div
            className="c3"
          >
            <Icon
              name="search-filled"
              selectable={true}
              size="20px"
              weight={400}
            >
              <Styled(Text)
                code="\\\\e92d"
                selectable={true}
                size="20px"
                weight={400}
              >
                <Text
                  capitalize={false}
                  className="c4"
                  code="\\\\e92d"
                  italic={false}
                  opacity={1}
                  selectable={true}
                  size="20px"
                  uppercase={false}
                  weight={400}
                >
                  <styled.span
                    capitalize={false}
                    className="c4"
                    code="\\\\e92d"
                    italic={false}
                    opacity={1}
                    selectable={true}
                    size="20px"
                    uppercase={false}
                    weight={400}
                  >
                    <span
                      className="c4 c5"
                      opacity={1}
                      size="20px"
                    />
                  </styled.span>
                </Text>
              </Styled(Text)>
            </Icon>
          </div>
        </styled.div>
      </div>
    </styled.div>
  </SearchBar>
</ThemeProvider>
`;
